# mase_backend

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  RUN_LOCAL_AI_SCORING.md  SYSTEM_INSTRUCTIONS_AUTHORING_GUIDE.md  TECHNICAL_DOCUMENTATION.md  ZOOMINFO_API_GUIDE.md  _bandhan.py  _canary.py  _canary_poll.py  _cdctiming.py  _chain_next.py  _check289.py  _completed_todos.py  _depcheck.py  _deploywatch.py  _envcheck.py  _evbcheck.py  _fleet_full.py  _fleet_gj.py  _fleet_live.py  _fleet_next.py  _fleet_qualified.py  _fleet_todos.py  _fleetwatch.py  _gjnext.py  _gjwatch.py  _hardrefresh.py  _maxis_scratch.py  _mxwatch.py  _qualwatch.py  _read_chatprompt.py  _rerun_maxis.py  _resolve_opps.py  _restore_bosch.py  _retry2.py  _retry2watch.py  (+347 more)
.agents/: agent_assets_metadata.toml
agent_checklist/: __init__.py  context_trim_middleware.py  fireworks_compat_middleware.py
audit_spike/: READOUT.md  c7_waterfall_check.py
build-certs/: .gitkeep
cc_work/: 0066700000wcFd7.ctx.json  0066700000wcFd7.msg  0066700000wdNe1.ctx.json  0066700000wdNe1.final.json  0066700000wdNe1.json  0066700000wdNe1.msg  0066700000yP1Px.ctx.json  0066700000yP1Px.done  0066700000yP1Px.final.json  0066700000yP1Px.json  0066700000yP1Px.msg  0066700000yP7lZ.ctx.json  0066700000yP7lZ.msg  0066700000yP7lZ.studioonly.json  0066700000zriZG.ctx.json  0066700000zriZG.msg  0066700000ztGNF.ctx.json  0066700000ztGNF.done  0066700000ztGNF.final.json  0066700000ztGNF.json  0066700000ztGNF.msg  006P7000001j0JR.ctx.json  006P7000001j0JR.msg  006P7000002Fz0Q.ctx.json  006P7000002Fz0Q.msg  (+1620 more)
(+497 files in other folders)
