[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.5",
    "ddgs>=9.10.0",
    "deepagents>=0.4.1",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.129.0",
    "fastmcp>=2.14.5",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.3.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.12",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.9",
    "langchain-xai>=1.2.2",
    "mcp>=1.26.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "simple-salesforce>=1.12.9",
    "supabase>=2.28.0",
    "uvicorn>=0.40.0",
    "zi-api-auth-client>=2.0.3",
]
